// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/attachment should match Display snapshot 1`] = `
<div>
  <div
    class="AttachmentView"
    data-testid="attachment"
  >
    <a
      download="test-filename"
      href="test.jpg"
    >
      📎
       
      test-filename
    </a>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/attachment should match Display snapshot with empty value 1`] = `
<div>
  <div
    class="AttachmentView"
    data-testid="attachment"
  >
    <a
      download=""
      href="#"
    >
      📎
       
      
    </a>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/attachment should match Input snapshot 1`] = `
<div>
  <input
    class="Attachment"
    data-testid="attachment-input"
    type="file"
  />
</div>
`;

exports[`components/blocksEditor/blocks/attachment should match Input snapshot with empty input 1`] = `
<div>
  <input
    class="Attachment"
    data-testid="attachment-input"
    type="file"
  />
</div>
`;
